# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.28.6
	Артём Воротников <skybon at gmail.com>:
	- Russian translation updates

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Allow /etc/eix-sync.conf not ending with newline. Use read -r
	- Transform io namespace into class; automatic closing on cleanup

*eix-0.28.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Allow that eix/portage config files are (recursively read) dirs,
	  see e.g. http://bugs.gentoo.org/show_bug.cgi?id=467276
	  Make /etc/eixrc a directory by default
	- Support for /etc/portage/package.accept_restrict, see
	  http://bugs.gentoo.org/show_bug.cgi?id=467622
	- eix-remote: add option -x/-X to exclude redundant local/remote
	  layman overlays. -x used to be the default in earlier eix versions,
	  but this was reverted since users do not expect it,
	  see http://bugs.gentoo.org/show_bug.cgi?id=467958
	  Put EIX_REMOTE_OPTS=-x into /etc/eixrc to keep the old behaviour.
	- eix-remote: make LOCAL_LAYMAN heuristic work with layman-2.0.0
	- Fixes in zsh completion for --print, --*overlay*, eix-installed-after
	- -fstrict-enums -fno-rtti -fno-threadsafe-statics -fvect-cost-model
	- eix-sync: Exit with status 3 if neither main tree changed nor
	  option -a was used nor have_changed=: is set, see
	  http://developer.berlios.de/bugs/?func=detailbug&
	  bug_id=18973&group_id=11597

*eix-0.28.4
	Артём Воротников <skybon at gmail.com>:
	- Russian translation fixes and updates

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Ethan Schoonover's Solarized has now its own color schemes in eix:
	  Set SOLARIZED if you use solarized (and omit setting TERM_ALT3 or
	  COLORSCHEME? as was recommended previously: this would choose a
	  standard scheme instead of the special adaption to solarized
	  system colors)
	- Use -fno-fat-lto-objects

*eix-0.28.3
	Артём Воротников <skybon at gmail.com>:
	- Russian translation fixes and updates

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>: